--- a/package.json
+++ b/package.json
@@ -1,38 +1,54 @@
 {
-  "name": "funscript-io",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "react-template",
+    "version": "0.0.1",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/jest": "^26.0.19",
+        "@types/node": "^14.14.20",
+        "@types/react": "^17.0.0",
+        "@types/react-datepicker": "^3.1.2",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-router": "^5.1.10",
+        "axios": "^0.21.1",
+        "dayjs": "^1.10.3",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-icons": "^4.2.0",
+        "react-markdown": "^5.0.3",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^3.4.3",
+        "react-spinners": "^0.10.6",
+        "sass": "^1.32.1",
+        "typescript": "^4.1.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "format": "prettier --write .",
+        "lint": "eslint . --ext ts --ext tsx --ext js"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/react-router-dom": "^5.1.7",
+        "prettier": "^2.2.1"
+    }
 }
