--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "typescript": "^4.1.3"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "dev": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
