--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-scripts": "^3.4.3",
         "react-spinners": "^0.10.6",
         "sass": "^1.32.1",
+        "thehandy": "^0.1.3",
         "typescript": "^4.1.3"
     },
     "scripts": {
