--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
         "@types/react-router": "^5.1.10",
         "axios": "^0.21.1",
         "dayjs": "^1.10.3",
+        "funscript-utils": "^0.2.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-dropzone": "^11.3.1",
         "react-icons": "^4.2.0",
         "react-markdown": "^5.0.3",
+        "react-player": "^2.9.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
         "react-spinners": "^0.10.6",
         "sass": "^1.32.1",
-        "thehandy": "^0.1.3",
+        "thehandy": "^0.2.3",
         "typescript": "^4.1.3"
     },
     "scripts": {
