--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "react-template",
-    "version": "0.0.1",
+    "name": "funscript-io",
+    "version": "0.1.0",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
