--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "funscript-io",
-    "version": "0.7.2",
+    "version": "0.7.3",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
@@ -14,11 +14,12 @@
         "@types/react-router": "^5.1.10",
         "axios": "^0.21.1",
         "dayjs": "^1.10.3",
-        "react": "^16.13.1",
         "funscript-utils": "^1.1.2",
+        "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-dropzone": "^11.3.1",
         "react-icons": "^4.2.0",
+        "react-markdown": "^6.0.2",
         "react-player": "^2.9.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
