--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "sass": "^1.32.1",
         "thehandy": "^0.2.7",
         "thehandy-react": "^0.2.8",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "use-double-click": "^1.0.5"
     },
     "scripts": {
         "dev": "react-scripts start",
@@ -54,6 +55,7 @@
     },
     "devDependencies": {
         "@types/react-router-dom": "^5.1.7",
+        "@types/use-double-click": "^1.0.1",
         "prettier": "^2.2.1"
     }
 }
