--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
     "name": "funscript-io",
-    "version": "0.9.2",
+    "version": "0.9.3",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "@types/jest": "^26.0.19",
-        "@types/node": "^14.14.20",
-        "@types/react": "^17.0.0",
-        "@types/react-datepicker": "^3.1.2",
-        "@types/react-dom": "^17.0.0",
-        "@types/react-router": "^5.1.10",
-        "axios": "^0.21.1",
-        "dayjs": "^1.10.3",
+        "@types/react": "^16.14.41",
+        "@types/react-dom": "^16.9.19",
+        "axios": "^1.4.0",
+        "dayjs": "^1.11.7",
         "funscript-utils": "^1.1.3",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-dropzone": "^11.3.1",
-        "react-icons": "^4.2.0",
-        "react-markdown": "^6.0.2",
-        "react-player": "^2.9.0",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.4.3",
-        "react-spinners": "^0.10.6",
-        "sass": "^1.32.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "react-dropzone": "^14.2.3",
+        "react-icons": "^4.8.0",
+        "react-markdown": "^8.0.7",
+        "react-player": "^2.12.0",
+        "react-router-dom": "^5.3.4",
+        "react-scripts": "^5.0.1",
+        "react-spinners": "^0.13.8",
+        "sass": "^1.62.1",
         "thehandy": "^0.2.8",
         "thehandy-react": "^0.2.8",
-        "typescript": "^4.1.3",
+        "ua-parser-js": "^1.0.35",
         "use-double-click": "^1.0.5"
     },
     "scripts": {
@@ -54,8 +47,13 @@
         ]
     },
     "devDependencies": {
-        "@types/react-router-dom": "^5.1.7",
+        "@types/node": "^20.1.3",
+        "@types/react-datepicker": "^4.11.2",
+        "@types/react-router": "^5.1.20",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/ua-parser-js": "^0.7.36",
         "@types/use-double-click": "^1.0.1",
-        "prettier": "^2.2.1"
+        "prettier": "^2.8.8",
+        "typescript": "^4.9.5"
     }
 }
